--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en"
+locale                   : "zh-CN"
 title                    : "Qing Lan"
 title_separator          : "-"
 name                     : "Qing Lan"
